{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 23,
  "lineage": "d263c4d3-b26e-3856-9ec6-af03632d8904",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "module.jenkins.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d1cd67c26f5fca19",
            "arn": "arn:aws:ec2:us-west-2:041740254655:instance/i-00bb26a5b5f3139e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bb26a5b5f3139e7",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform-20220719215533179700000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4b100092dcc1424",
            "private_dns": "ip-10-0-0-157.us-west-2.compute.internal",
            "private_ip": "10.0.0.157",
            "public_dns": "ec2-35-86-117-145.us-west-2.compute.amazonaws.com",
            "public_ip": "35.86.117.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0965f6faf97bbff4c",
                "volume_size": 160,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c1bccaaa30ed090",
            "tags": {
              "Department": "Engineering",
              "Environment": "QA",
              "Name": "Sparkling Water Jenkins Master",
              "Owner": "marek.novotny@h2o.ai",
              "Project": "SparklingWater",
              "Scheduling": "AlwaysOn"
            },
            "tenancy": "default",
            "volume_tags": {
              "Department": "Engineering",
              "Environment": "QA",
              "Name": "Sparkling Water Jenkins Master Root Block Device",
              "Owner": "marek.novotny@h2o.ai",
              "Project": "SparklingWater",
              "Scheduling": "AlwaysOn"
            },
            "vpc_security_group_ids": [
              "sg-0f5d95e4b16b3a080"
            ]
          },
          "dependencies": [
            "module.jenkins.aws_key_pair.key",
            "module.jenkins.aws_s3_bucket.init_files_bucket",
            "module.jenkins.aws_s3_bucket_object.aws_key_file",
            "module.jenkins.aws_s3_bucket_object.github_key_file",
            "module.jenkins.aws_s3_bucket_object.init",
            "module.jenkins.aws_s3_bucket_object.init_jenkins",
            "module.jenkins.aws_s3_bucket_object.init_ssl",
            "module.jenkins.aws_s3_bucket_object.install_plugins",
            "module.jenkins.aws_s3_bucket_object.signing_file",
            "module.jenkins.aws_security_group.jenkins_security_group",
            "module.network.aws_subnet.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.network.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04f23d9c8f2036d5b",
            "owner_id": "041740254655",
            "tags": {
              "Department": "Engineering",
              "Environment": "QA",
              "Name": "SparklingWaterTestInfraGateway",
              "Owner": "marek.novotny@h2o.ai",
              "Project": "SparklingWater",
              "Scheduling": "AlwaysOn"
            },
            "vpc_id": "vpc-0c9cad0a037ccd2d5"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "module.network.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0840e08c68fa20ca3",
            "original_route_table_id": "rtb-0c22c85465487fc34",
            "route_table_id": "rtb-02e79b4bd81f4aac3",
            "vpc_id": "vpc-0c9cad0a037ccd2d5"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.r",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "module.network.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02e79b4bd81f4aac3",
            "owner_id": "041740254655",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f23d9c8f2036d5b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0c9cad0a037ccd2d5"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security_group",
      "provider": "module.jenkins.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:041740254655:security-group/sg-0f5d95e4b16b3a080",
            "description": "Security group for master node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5d95e4b16b3a080",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20220719215535591300000003",
            "name_prefix": null,
            "owner_id": "041740254655",
            "revoke_rules_on_delete": true,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c9cad0a037ccd2d5"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.network.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:041740254655:subnet/subnet-02c1bccaaa30ed090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02c1bccaaa30ed090",
            "map_public_ip_on_launch": false,
            "owner_id": "041740254655",
            "tags": {
              "Department": "Engineering",
              "Environment": "QA",
              "Name": "SparklingWaterTestInfraSubnet",
              "Owner": "marek.novotny@h2o.ai",
              "Project": "SparklingWater",
              "Scheduling": "AlwaysOn"
            },
            "vpc_id": "vpc-0c9cad0a037ccd2d5"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.network.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:041740254655:vpc/vpc-0c9cad0a037ccd2d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0137e7a8d488edba2",
            "default_route_table_id": "rtb-0c22c85465487fc34",
            "default_security_group_id": "sg-028723cfa4a79dc35",
            "dhcp_options_id": "dopt-008e116f3283a0a9a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c9cad0a037ccd2d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c22c85465487fc34",
            "owner_id": "041740254655",
            "tags": {
              "Department": "Engineering",
              "Environment": "QA",
              "Name": "SparklingWaterTestInfra",
              "Owner": "marek.novotny@h2o.ai",
              "Project": "SparklingWater",
              "Scheduling": "AlwaysOn"
            }
          }
        }
      ]
    }
  ]
}